--- a/pack/commands.cfg
+++ b/pack/commands.cfg
@@ -1,7 +1,7 @@
 define command {
   command_name                   check_activemq_heap_used
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name heap_memory_used \
                                     --mbean java.lang:type=Memory \
                                     --attribute HeapMemoryUsage \
@@ -11,14 +11,14 @@ define command {
                                     --base-path max \
                                     --label "Heap-Memory: %.2r% used (%.2v %u / %.2b %w)" \
                                     --unit B \
-                                    --warning $_HOSTACTIVEMQHEAPMEMORY_WARN$ \
-                                    --critical $_HOSTACTIVEMQHEAPMEMORY_CRIT$
+                                    --warning $_HOSTACTIVEMQ_HEAPMEMORY_WARN$ \
+                                    --critical $_HOSTACTIVEMQ_HEAPMEMORY_CRIT$
 }
 
 define command {
   command_name                   check_activemq_non_heap_used
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name non_heap_memory_used \
                                     --mbean java.lang:type=Memory \
                                     --attribute NonHeapMemoryUsage \
@@ -28,56 +28,56 @@ define command {
                                     --base-path max \
                                     --label "Non-Heap-Memory: %.2r% used (%.2v %u / %.2b %w)" \
                                     --unit B \
-                                    --warning $_HOSTACTIVEMQNONHEAPMEMORY_WARN$ \
-                                    --critical $_HOSTACTIVEMQNONHEAPMEMORY_CRIT$
+                                    --warning $_HOSTACTIVEMQ_NONHEAPMEMORY_WARN$ \
+                                    --critical $_HOSTACTIVEMQ_NONHEAPMEMORY_CRIT$
 }
 
 define command {
   command_name                   check_activemq_enqueue_count
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name enqueue_count_$ARG1$ \
-                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQBROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
+                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQ_BROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
                                     --attribute EnqueueCount \
                                     --label "Enqueue Count per Minute: %.2v" \
                                     --delta 60 \
-                                    --warning $_HOSTACTIVEMQENQUEUECOUNT_WARN$ \
-                                    --critical $_HOSTACTIVEMQENQUEUECOUNT_CRIT$
+                                    --warning $_HOSTACTIVEMQ_ENQUEUECOUNT_WARN$ \
+                                    --critical $_HOSTACTIVEMQ_ENQUEUECOUNT_CRIT$
 }
 
 define command {
   command_name                   check_activemq_dequeue_count
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name dequeue_count_$ARG1$ \
-                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQBROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
+                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQ_BROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
                                     --attribute DequeueCount \
                                     --label "Dequeue Count per Minute: %.2v" \
                                     --delta 60 \
-                                    --warning $_HOSTACTIVEMQDEQUEUECOUNT_WARN$ \
-                                    --critical $_HOSTACTIVEMQDEQUEUECOUNT_CRIT$
+                                    --warning $_HOSTACTIVEMQ_DEQUEUECOUNT_WARN$ \
+                                    --critical $_HOSTACTIVEMQ_DEQUEUECOUNT_CRIT$
 }
 
 define command {
   command_name                   check_activemq_consumer_count
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name consumer_count_$ARG1$ \
-                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQBROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
+                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQ_BROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
                                     --attribute ConsumerCount \
                                     --label "Consumer Count: %v" \
-                                    --critical $_HOSTACTIVEMQCONSUMERCOUNT_CRIT$
+                                    --critical $_HOSTACTIVEMQ_CONSUMERCOUNT_CRIT$
 }
 
 define command {
   command_name                   check_activemq_queue_size
-  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQAUTH$ \
-                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQPORT$/$_HOSTACTIVEMQJOLOKIAPATH$ \
+  command_line                   $PLUGINSDIR$/check_jmx4perl $_HOSTACTIVEMQ_AUTH$ \
+                                    --url http://$HOSTNAME$:$_HOSTACTIVEMQ_PORT$/$_HOSTACTIVEMQ_JOLOKIAPATH$ \
                                     --name queue_size_$ARG1$ \
-                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQBROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
+                                    --mbean org.apache.activemq:brokerName=$_HOSTACTIVEMQ_BROKERNAME$,destinationName=$ARG1$,destinationType=Queue,type=Broker \
                                     --attribute QueueSize \
                                     --label "Queue Size: %v" \
-                                    --warning $_HOSTACTIVEMQQUEUESIZE_WARN$ \
-                                    --critical $_HOSTACTIVEMQQUEUESIZE_CRIT$
+                                    --warning $_HOSTACTIVEMQ_QUEUESIZE_WARN$ \
+                                    --critical $_HOSTACTIVEMQ_QUEUESIZE_CRIT$
 }
 
