--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -2,20 +2,22 @@ define host {
   name                           activemq
   use                            generic-host
   register                       0
-  _ACTIVEMQAUTH                  --user admin --password admin
-  _ACTIVEMQPORT                  8161
-  _ACTIVEMQJOLOKIAPATH           api/jolokia
-  _ACTIVEMQBROKERNAME            $HOSTNAME$
-  _ACTIVEMQHEAPMEMORY_WARN       80
-  _ACTIVEMQHEAPMEMORY_CRIT       90
-  _ACTIVEMQNONHEAPMEMORY_WARN    80
-  _ACTIVEMQNONHEAPMEMORY_CRIT    90
-  _ACTIVEMQENQUEUECOUNT_WARN     10:
-  _ACTIVEMQENQUEUECOUNT_CRIT     5:
-  _ACTIVEMQDEQUEUECOUNT_WARN     10:
-  _ACTIVEMQDEQUEUECOUNT_CRIT     5:
-  _ACTIVEMQCONSUMERCOUNT_CRIT    1:
-  _ACTIVEMQQUEUESIZE_WARN        :1000
-  _ACTIVEMQQUEUESIZE_CRIT        :10000
+
+  _ACTIVEMQ_AUTH                 --user admin --password admin
+  _ACTIVEMQ_PORT                 8161
+  _ACTIVEMQ_JOLOKIAPATH          api/jolokia
+  _ACTIVEMQ_BROKERNAME           $HOSTNAME$
+
+  _ACTIVEMQ_HEAPMEMORY_WARN      80
+  _ACTIVEMQ_HEAPMEMORY_CRIT      90
+  _ACTIVEMQ_NONHEAPMEMORY_WARN   80
+  _ACTIVEMQ_NONHEAPMEMORY_CRIT   90
+  _ACTIVEMQ_ENQUEUECOUNT_WARN    10:
+  _ACTIVEMQ_ENQUEUECOUNT_CRIT    5:
+  _ACTIVEMQ_DEQUEUECOUNT_WARN    10:
+  _ACTIVEMQ_DEQUEUECOUNT_CRIT    5:
+  _ACTIVEMQ_CONSUMERCOUNT_CRIT   1:
+  _ACTIVEMQ_QUEUESIZE_WARN       :1000
+  _ACTIVEMQ_QUEUESIZE_CRIT       :10000
 }
 
